<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="settings" type="id"/>
    <item name="content_viewpager" type="id"/>
    <item name="preview" type="id"/>


    <item name="start_toolbar_container" type="id"/>
    <item name="start_toolbar_container_toolbar" type="id"/>
    <item name="start_toolbar_overflow" type="id"/>
    <item name="start_content_listview" type="id"/>

    <item name="booru_drawer" type="id"/>
    <item name="booru_drawer_content" type="id"/>
    <item name="booru_drawer_panel" type="id"/>
    <item name="booru_drawer_panel_posts" type="id"/>
...
    <item name="sampleinfo_tags_scrollview" type="id"/>
    <item name="sampleinfo_progressbar" type="id"/>
    <item name="sampleinfo_info_listview" type="id"/>
    <item name="samples_gif" type="id"/>
    <item name="samples_webm" type="id"/>
    <item name="settings_toolbar" type="id"/>
    <item name="setting_nsfw" type="id"/>
    <item name="setting_nsfw_checkbox" type="id"/>
    <item name="search_progress" type="id"/>
    <item name="sampleinfo_toolbar_tags_search" type="id"/>
    <item name="samples_content" type="id"/>
    <item name="samples_content_webm_preview" type="id"/>
    <item name="setting_stream_download" type="id"/>
    <item name="setting_stream_download_checkbox" type="id"/>
...
